# Comparers

./: CMakeLists.txt  README.md  comparer.c  comparer.h  comparers  main.c  make.txt
comparers.dSYM/Contents/Resources/DWARF/: comparers
include/: comparer.h
output/debug/lib/: libcomparers.dylib
output/unix/lib/: libcomparers.dylib
outputs/: Comparers.cbp  Makefile  cmake_install.cmake
outputs/debug/lib/: libcomparers.dylib
outputs/lib/apple/: libcomparers.dylib
src/: main.c
